--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -11,7 +11,12 @@
 * {
   margin: 0;
   padding: 0;
-  font: inherit; /* Get rid of all font sizes and heights */
+  border: 1px solid black;
+  background-color: rgb(31, 142, 170, 0.3);
+}
+
+p {
+  font-size: .75rem;
 }
 
 @layer base {
