Creates and updates client component

--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -11,8 +11,8 @@
 * {
   margin: 0;
   padding: 0;
-  /* border: 1px solid black;
-  background-color: rgb(31, 142, 170, 0.3); */
+  border: 1px solid black;
+  background-color: rgb(31, 142, 170, 0.15);
 }
 
 p {
@@ -22,6 +22,7 @@ p {
 .footer-el {
   @apply p-8 lg:pl-48 lg:pr-48 lg:p-4;
 }
+
 
 @layer base {
   :root {
