--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -85,3 +85,27 @@ p {
     @apply bg-background text-foreground;
   }
 }
+
+@media (min-width: 1024px) {
+
+  .productCard_2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr min-content;
+  }
+
+  .prc1 {
+    grid-column: 1/3;
+    grid-row: 1 /2;
+    
+  }
+
+  .prc2 {
+    grid-column: 3 /4;
+  }
+
+  .prc3 {
+    grid-row: 2;
+    grid-column: 1 /-1;
+  }
+}
