--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -108,4 +108,20 @@ p {
     grid-row: 2;
     grid-column: 1 /-1;
   }
+
+  .productCard_4 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .popularImg {
+    grid-column: 2/-1;
+    width: 100%;
+  }
+
+  .popular {
+    grid-column: 1/2;
+    grid-row: 1;
+    width: 100%;
+  }
 }
