--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -49,6 +49,7 @@ p {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
@@ -81,6 +82,7 @@ p {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -98,11 +100,12 @@ p {
     grid-column: 1/3;
     grid-row: 1 /2;
     width: 100%;
-    
+
   }
 
   .prc2 {
-    grid-column: 3 /4;
+    grid-column: 3/4;
+    grid-row: 1/2;
   }
 
   .prc3 {
