--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -105,7 +105,6 @@ section {
   .prc1 {
     grid-column: 1/3;
     grid-row: 1 /2;
-    width: 100%;
 
   }
 
@@ -126,12 +125,13 @@ section {
 
   .popularImg {
     grid-column: 2/-1;
+    grid-row: 1/ -1;
     width: 100%;
+    height: 100%;
   }
 
   .popular {
     grid-column: 1/2;
-    grid-row: 1;
-    width: 100%;
+    grid-row: 1 /-1;
   }
 }
