--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -12,7 +12,7 @@
   margin: 0;
   padding: 0;
   border: 1px solid black;
-  /* background-color: rgb(31, 142, 170, 0.1); */
+  background-color: rgb(31, 142, 170, 0.1);
 }
 
 p {
