--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -11,7 +11,7 @@
 * {
   margin: 0;
   padding: 0;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   /* background-color: rgb(31, 142, 170, 0.1); */
 }
 
