--- a/pandora/src/index.css
+++ b/pandora/src/index.css
@@ -11,12 +11,14 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 0.9rem;
   /* border: 1px solid black; */
   /* background-color: rgb(31, 142, 170, 0.1); */
 }
 
 p {
   font-size: .75rem;
+  color: #737373;
 }
 
 
